[package]
name = "test-simulate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.18.4"
solana-sdk = "1.18.4"
spl-memo = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }